Fixed tab content overflowing leading to double scrollbars

--- a/src/stylesheets/node.sass
+++ b/src/stylesheets/node.sass
@@ -11,6 +11,8 @@ $dim-highlight-color: darken($highlight-color, 20%)
 $content-base-color: #3A3A3A
 $content-border-color: #999999
 
+$tab-height: 39px
+
 textarea
   background-color: $content-base-color
   border: 2px solid $content-border-color
@@ -40,11 +42,14 @@ body
   padding: 0px
   margin: 0px
 
+.react-tabs-container
+  height: $tab-height
+
 .main-panel-container
-  position: absolute
-  display: inline-block
   width: 100%
-  height: 100%
+  position: absolute
+  top: $tab-height
+  bottom: 0px
   overflow: scroll
   background-color: $bg-color
 
@@ -55,7 +60,7 @@ body
   margin: 0px
   padding: 0px
   width: 3000px
-  height: 1000px
+  height: 1500px
   background-size: $grid-square-size $grid-square-size
   background-image: linear-gradient(to right, $grid-color $grid-line-size, transparent $grid-line-size), linear-gradient(to bottom, $grid-color $grid-line-size, transparent $grid-line-size)
   background-color: $bg-color
